set overflow-y to auto on correct answer

--- a/styles/style.css
+++ b/styles/style.css
@@ -90,7 +90,7 @@ body {
 .correct-answer {
   width: 100%;
   color: green;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .incorrect-answer {
